workloads/fraud-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fraud-service
  namespace: applications
  labels:
    app: fraud-service
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: fraud-service
  template:
    metadata:
      labels:
        app: fraud-service
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: fraud-service
      volumes:
        - name: pyroscope-agent
          emptyDir: {}
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: node-role.kubernetes.io/control-plane
                operator: DoesNotExist
      containers:
      - name: fraud-service
        image: registry.homelab/fraud-service:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
        ports:
        - containerPort: 9091
        volumeMounts:
          - name: pyroscope-agent
            mountPath: /agent
---
apiVersion: v1
kind: Service
metadata:
  name: fraud-service
  namespace: applications
  labels:
    app: fraud-service
spec:
  selector:
    app: fraud-service
  ports:
  - name: grpc
    port: 9091
    targetPort: 9091
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fraud-service-ingress
  namespace: applications
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "homelab-ca-issuer"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  tls:
    - hosts:
        - fraud.homelab
      secretName: fraud-tls-secret
  rules:
  - host: fraud.homelab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fraud-service
            port:
              number: 9091
