workloads/webhooks-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhooks-service
  namespace: applications
  labels:
    app: webhooks-service
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: webhooks-service
  template:
    metadata:
      labels:
        app: webhooks-service
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: webhooks-service
      volumes:
        - name: pyroscope-agent
          emptyDir: {}
      containers:
      - name: webhooks-service
        image: registry.homelab/webhooks-service:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
        ports:
        - containerPort: 8085
        volumeMounts:
          - name: pyroscope-agent
            mountPath: /agent
---
apiVersion: v1
kind: Service
metadata:
  name: webhooks-service
  namespace: applications
  labels:
    app: webhooks-service
spec:
  selector:
    app: webhooks-service
  ports:
  - name: http
    port: 8085
    targetPort: 8085
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhooks-service-ingress
  namespace: applications
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "homelab-ca-issuer"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_hide_header X-Frame-Options;
      proxy_hide_header Content-Security-Policy;
spec:
  tls:
    - hosts:
        - webhooks.homelab
      secretName: webhooks-tls-secret
  rules:
  - host: webhooks.homelab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webhooks-service
            port:
              number: 8085
